--- a/notebooks/DatasetForKP.ipynb
+++ b/notebooks/DatasetForKP.ipynb
@@ -322,7 +322,12 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1461,7 +1466,12 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3401,29 +3411,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/masha/Desktop/DataScience/GNN/Project/GNN-NLP/notebooks\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pwd"
+    "small_kpdf[['abstract', 'keyword', 'clean']].to_csv('../data/small_kpdf27-01-21.tsv', sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "small_kpdf.to_csv('../data/small_kpdf27-01-21.tsv', sep='\\t')"
+    "torch.save(small_kpdf['ptgeo_DataObj'].tolist(), '../data/small_kpdfDataList.pt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
